syntax = "proto3";

package proto;

option go_package = "sdfs/services/proto";

message ReadChunk {
    string name = 1;
    string location = 2;
}

message RegisterRequest {
    string url = 1;
}

message RegisterResponse {
    string status = 1;
}

message LookupRequest {
    string name = 1;
}

message LookupResponse {
    repeated ReadChunk readChunks = 1;
}

message CreateRequest {
    string name = 1;
    uint64 size = 2;
}

message CreateResponse {
    repeated string locations = 1;
}

message WriteRequest {
    string name = 1;
    bytes data = 2;
}

message WriteResponse {
    string status = 1;
}

message ReadRequest {
    string name = 1;
}

message ReadResponse {
    bytes data = 1;
}

service DirectoryService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Lookup(LookupRequest) returns (LookupResponse) {}
}

service StorageService {
    rpc Read(ReadRequest) returns (ReadResponse) {}
    rpc Write(WriteRequest) returns (WriteResponse) {}
}